overflow fix

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -38,7 +38,6 @@ body {
   font-family: "Poppins", sans-serif;
   color: $accentColor;
   padding: 1.5em;
-  overflow-x: hidden;
   background-color: $bgColor;
   @media (min-width: 390px) {
     font-size: 1.1rem;
